# PyINETA

./: pyproject.toml  requirements.txt  setup.cfg
pyineta/: pyineta.py
src/pyineta/: __init__.py
src/scripts/: run_pyineta.py
